--- a/styleguide.css
+++ b/styleguide.css
@@ -79,7 +79,7 @@ div.codeExample:before, div.jsExample:before {
 div.codeExample:before {
   content: "Example";
   background-color: #f9f9f9;
-  width: 60px;
+  padding: 0 10px;
   top: -1px;
   left: -1px;
 }
